compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_custom_type_names.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1108
expression: "type DupType { A } type DupType { B }"

---
error: Duplicate type definition
  ┌─ /src/one/two.gleam:1:1
  │
1 │ type DupType { A } type DupType { B }
  │ ^^^^^^^^^^^^       ^^^^^^^^^^^^ Redefined here
  │ │                   
  │ First defined here

The type `DupType` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

